--- a/Languages/Russian/DefInjected/ThingDef/Races_Collector.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Races_Collector.xml
@@ -4,7 +4,7 @@
   <!-- EN: collector -->
   <NAT_Collector.label>коллекционер</NAT_Collector.label>
   <!-- EN: A curved human figure with massive shoulder and carpal protrusions.\n\nThe Collector is an overgrown sightstealer who has acquired an irresistible mania for collecting along with complete self-awareness. -->
-  <NAT_Collector.description></NAT_Collector.description>
+  <NAT_Collector.description>Искривлённая человеческая фигура с массивными кистевыми и плечевыми выростами.\n\nЯвляясь взглядоградом-переростком, коллекционер обрёл самосознание вместе с манией коллекционирования разных безделушек.</NAT_Collector.description>
   <!-- EN: head -->
   <NAT_Collector.tools.head.label>голова</NAT_Collector.tools.head.label>
   <!-- EN: left claw -->
